--- a/index.html
+++ b/index.html
@@ -31,22 +31,53 @@
 
     <!-- Content -->
     <div class="content">
-
+        <div>
+            Some random information.
+        </div>
+        <div>
+            <img src="" alt="">
+            there is some text under an illustration or image.
+        </div>
+        <div>
+            <img src="" alt="">
+            there is some text under an illustration or image.
+        </div>
+        <div>
+            <img src="" alt="">
+            there is some text under an illustration or image.
+        </div>
+        <div>
+            <img src="" alt="">
+            there is some text under an illustration or image.
+        </div>
     </div>
 
     <!-- Quote -->
     <div class="quote">
-
+        <div>
+            <div>
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div>
+                - Thor, God of Thunder
+            </div>
+        </div>
     </div>
 
     <!-- Subscriber -->
     <div>
-
+        <div>
+            Call to action! It's time!
+        </div>
+        <div>
+            Sign up for our product by clicking that button right over there!
+        </div>
+        <button>Sign up</button>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-
+        !Copyrighted by Nobody!
     </div>
 </body>
 </html>
