--- a/index.html
+++ b/index.html
@@ -4,75 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <div class="header">
-        <div>
-            Header Logo
+        <div class="top">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href target="_blank" rel="noopener noreferrer">header link one</a></li>
+                    <li><a href target="_blank" rel="noopener noreferrer">header link two</a></li>
+                    <li><a href target="_blank" rel="noopener noreferrer">header link two</a></li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <ul>
-                <li><a href target="_blank" rel="noopener noreferrer">header link one</a></li>
-                <li><a href target="_blank" rel="noopener noreferrer">header link two</a></li>
-                <li><a href target="_blank" rel="noopener noreferrer">header link two</a></li>
-            </ul>
+
+        <div class="hero">
+            <div class="left">
+                <div class="main">
+                    This website is awesome
+                </div>
+                <div class="secondary">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                </div>
+                <button>Sign Up</button>
+            </div>
+            <img src="images/one.jpg" alt="this is a placeholder for an image">
+            <!-- make sure to define the dimensions of the image so space is reserved incase it doesn't load -->
         </div>
-        <div>
-            This website is awesome
-        </div>
-        <div>
-            This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-        </div>
-        <button>Sign Up</button>
-        <img src="" alt="this is a placeholder for an image">
-        <!-- make sure to define the dimensions of the image so space is reserved incase it doesn't load -->
-    </div>
+</div>
 
     <!-- Content -->
     <div class="content">
-        <div>
+        <div class="info">
             Some random information.
         </div>
-        <div>
-            <img src="" alt="">
-            there is some text under an illustration or image.
-        </div>
-        <div>
-            <img src="" alt="">
-            there is some text under an illustration or image.
-        </div>
-        <div>
-            <img src="" alt="">
-            there is some text under an illustration or image.
-        </div>
-        <div>
-            <img src="" alt="">
-            there is some text under an illustration or image.
+        <div class="container">
+            <div>
+                <img src="images/two.jpg" alt="">
+                there is some text under an illustration or image
+            </div>
+            <div>
+                <img src="images/three.jpg" alt="">
+                there is some text under an illustration or image
+            </div>
+            <div>
+                <img src="images/three.jpg" alt="">
+                there is some text under an illustration or image
+            </div>
+            <div>
+                <img src="images/four.jpg" alt="">
+                there is some text under an illustration or image
+            </div>
         </div>
     </div>
 
     <!-- Quote -->
     <div class="quote">
         <div>
-            <div>
+            <div class="text">
                 This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
             </div>
-            <div>
-                - Thor, God of Thunder
+            <div class="thor">
+                -Thor, God of Thunder
             </div>
         </div>
     </div>
 
     <!-- Subscriber -->
-    <div>
-        <div>
-            Call to action! It's time!
+    <div class="subscribe">
+        <div class="container">
+            <div class="left">
+                <div class="up">
+                    Call to action! It's time!
+                </div>
+                <div class="down">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <button>Sign up</button>
         </div>
-        <div>
-            Sign up for our product by clicking that button right over there!
-        </div>
-        <button>Sign up</button>
     </div>
 
     <!-- Footer -->
